--- a/style.css
+++ b/style.css
@@ -31,10 +31,14 @@ button {
     border-radius: 5px;
 }
 
-#increment-btn {
+#decrement-btn {
     background: darkred;
 }
 
-#save-btn {
+#increment-btn {
     background: darkgreen;
+}
+
+#save-btn {
+    background: #EED202;
 }
